# maildirs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
src/: entry.rs  error.rs  flag.rs  folder.rs  lib.rs  maildir.rs  validate.rs
tests/: entry.rs  maildir.rs  maildirpp.rs  maildirs.rs  main.rs  smoke.rs
