[package]
name = "maildirpp"
version = "0.2.0"
description = "Maildir++ library for Rust"
authors = [
    "Knut Magnus Aasrud <km@aasrud.com>",
    "soywod <clement.douin@posteo.net>",
]
edition = "2021"
license = "MIT"
categories = ["email", "filesystem"]
keywords = ["pim", "email", "maildir", "maildir++"]
repository = "https://git.sr.ht/~kmaasrud/maildirpp"

[dependencies]
gethostname = "0.4.3"

[dev-dependencies]
mail-parser = "0.8.2"
percent-encoding = "2.3.0"
tempfile = "3.8.0"
walkdir = "2.3.3"
