[package]
name = "maildirs"
version = "0.2.0"
description = "Rust library to manage collections of Maildir"
homepage = "https://git.sr.ht/~soywod/maildirs"
documentation = "https://docs.rs/maildirs/latest/maildirs/"
repository = "https://git.sr.ht/~soywod/maildirs"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email", "filesystem"]
keywords = ["mail", "email", "maildir", "maildir++", "filesystem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[dev-dependencies]
mail-parser = "0.9"
percent-encoding = "2.3"
tempfile = "3.8"

[dependencies]
gethostname = "0.4"
thiserror = "1.0"
walkdir = "2.5"
